syntax = "proto3";

option optimize_for = LITE_RUNTIME;
option cc_enable_arenas = true;

package duckdb_wasm.proto.api;

// A status code
enum StatusCode {
    SUCCESS = 0;
    ERROR = 1;
}

/// A formatted text
message FormattedText {
    string text = 1;
}

/// A raw data buffer
message RawData {
    bytes data = 1;
}

